--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-    "genieai.openai.maxTokens": 5000,
-    "genieai.openai.model": "gpt-4",
+    "genieai.openai.model": "gpt-3.5-turbo",
     "genieai.enableConversationHistory": true
 }
